# network 模块
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(LightRO-1.0-mod-network)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Boost REQUIRED COMPONENTS)
IF(Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
    LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

# Boost 链接库
SET(USED_LIBS ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBRARY})

ADD_LIBRARY(listener STATIC listener.cpp)
TARGET_LINK_LIBRARIES(listener ${USED_LIBS})

add_subdirectory(unit_test)
